# Vertyces

./: README.md  pyproject.toml
matrix/: matrix.py
utils/: colors.py
vertex/: vertex3f.py
vertyces/form/: rectangle.py
vertyces/matrix/: matrix.py
vertyces/utils/: colors.py
vertyces/vertex/: __init__.py  vertex2f.py  vertex3f.py
