[tool.poetry]
name = "vertyces"
version = "0.1.0"
description = "Python package to manage simple math objects"
authors = ["JulienGL <jgl94@free.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mypy = "^1.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
