[tool.poetry]
name = "vertyces"
version = "0.1.0"
description = "Python package to manage simple math objects"
authors = ["JulienGL <jgl94@free.fr>"]
readme = "README.md"
packages = [
  {include = "vertyces"}
]

[tool.poetry.dependencies]
python = "^3.12"
mypy = "^1.11.1"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
profile = "black"

[tool.mypy]
python_version = "3.12"

disallow_any_unimported = true
disallow_any_decorated = true
disallow_any_generics = true
disallow_subclassing_any = true

disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true

no_implicit_optional = true

warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_redundant_casts = true

# Misc things
strict_equality = true

# Config file
warn_unused_configs = true